fol2nnf/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> cfor
Rule 1     cfor -> for
Rule 2     for -> atom
Rule 3     for -> NEG LP for RP
Rule 4     for -> AND LP for COMMA for RP
Rule 5     for -> OR LP for COMMA for RP
Rule 6     for -> SOME LP VAR COMMA for RP
Rule 7     for -> ALL LP VAR COMMA for RP
Rule 8     for -> IMP LP for COMMA for RP
Rule 9     atom -> PRED LP VAR RP
Rule 10    atom -> PRED LP VAR COMMA VAR RP
Rule 11    atom -> EQ LP VAR COMMA VAR RP

Terminals, with rules where they appear

ALL                  : 7
AND                  : 4
COMMA                : 4 5 6 7 8 10 11
EQ                   : 11
IMP                  : 8
LP                   : 3 4 5 6 7 8 9 10 11
NEG                  : 3
OR                   : 5
PRED                 : 9 10
RP                   : 3 4 5 6 7 8 9 10 11
SOME                 : 6
VAR                  : 6 7 9 10 10 11 11
error                : 

Nonterminals, with rules where they appear

atom                 : 2
cfor                 : 0
for                  : 1 3 4 4 5 5 6 7 8 8

Parsing method: LALR

state 0

    (0) S' -> . cfor
    (1) cfor -> . for
    (2) for -> . atom
    (3) for -> . NEG LP for RP
    (4) for -> . AND LP for COMMA for RP
    (5) for -> . OR LP for COMMA for RP
    (6) for -> . SOME LP VAR COMMA for RP
    (7) for -> . ALL LP VAR COMMA for RP
    (8) for -> . IMP LP for COMMA for RP
    (9) atom -> . PRED LP VAR RP
    (10) atom -> . PRED LP VAR COMMA VAR RP
    (11) atom -> . EQ LP VAR COMMA VAR RP

    NEG             shift and go to state 4
    AND             shift and go to state 1
    OR              shift and go to state 10
    SOME            shift and go to state 5
    ALL             shift and go to state 2
    IMP             shift and go to state 7
    PRED            shift and go to state 11
    EQ              shift and go to state 9

    cfor                           shift and go to state 6
    for                            shift and go to state 3
    atom                           shift and go to state 8

state 1

    (4) for -> AND . LP for COMMA for RP

    LP              shift and go to state 12


state 2

    (7) for -> ALL . LP VAR COMMA for RP

    LP              shift and go to state 13


state 3

    (1) cfor -> for .

    $end            reduce using rule 1 (cfor -> for .)


state 4

    (3) for -> NEG . LP for RP

    LP              shift and go to state 14


state 5

    (6) for -> SOME . LP VAR COMMA for RP

    LP              shift and go to state 15


state 6

    (0) S' -> cfor .



state 7

    (8) for -> IMP . LP for COMMA for RP

    LP              shift and go to state 16


state 8

    (2) for -> atom .

    COMMA           reduce using rule 2 (for -> atom .)
    RP              reduce using rule 2 (for -> atom .)
    $end            reduce using rule 2 (for -> atom .)


state 9

    (11) atom -> EQ . LP VAR COMMA VAR RP

    LP              shift and go to state 17


state 10

    (5) for -> OR . LP for COMMA for RP

    LP              shift and go to state 18


state 11

    (9) atom -> PRED . LP VAR RP
    (10) atom -> PRED . LP VAR COMMA VAR RP

    LP              shift and go to state 19


state 12

    (4) for -> AND LP . for COMMA for RP
    (2) for -> . atom
    (3) for -> . NEG LP for RP
    (4) for -> . AND LP for COMMA for RP
    (5) for -> . OR LP for COMMA for RP
    (6) for -> . SOME LP VAR COMMA for RP
    (7) for -> . ALL LP VAR COMMA for RP
    (8) for -> . IMP LP for COMMA for RP
    (9) atom -> . PRED LP VAR RP
    (10) atom -> . PRED LP VAR COMMA VAR RP
    (11) atom -> . EQ LP VAR COMMA VAR RP

    NEG             shift and go to state 4
    AND             shift and go to state 1
    OR              shift and go to state 10
    SOME            shift and go to state 5
    ALL             shift and go to state 2
    IMP             shift and go to state 7
    PRED            shift and go to state 11
    EQ              shift and go to state 9

    for                            shift and go to state 20
    atom                           shift and go to state 8

state 13

    (7) for -> ALL LP . VAR COMMA for RP

    VAR             shift and go to state 21


state 14

    (3) for -> NEG LP . for RP
    (2) for -> . atom
    (3) for -> . NEG LP for RP
    (4) for -> . AND LP for COMMA for RP
    (5) for -> . OR LP for COMMA for RP
    (6) for -> . SOME LP VAR COMMA for RP
    (7) for -> . ALL LP VAR COMMA for RP
    (8) for -> . IMP LP for COMMA for RP
    (9) atom -> . PRED LP VAR RP
    (10) atom -> . PRED LP VAR COMMA VAR RP
    (11) atom -> . EQ LP VAR COMMA VAR RP

    NEG             shift and go to state 4
    AND             shift and go to state 1
    OR              shift and go to state 10
    SOME            shift and go to state 5
    ALL             shift and go to state 2
    IMP             shift and go to state 7
    PRED            shift and go to state 11
    EQ              shift and go to state 9

    for                            shift and go to state 22
    atom                           shift and go to state 8

state 15

    (6) for -> SOME LP . VAR COMMA for RP

    VAR             shift and go to state 23


state 16

    (8) for -> IMP LP . for COMMA for RP
    (2) for -> . atom
    (3) for -> . NEG LP for RP
    (4) for -> . AND LP for COMMA for RP
    (5) for -> . OR LP for COMMA for RP
    (6) for -> . SOME LP VAR COMMA for RP
    (7) for -> . ALL LP VAR COMMA for RP
    (8) for -> . IMP LP for COMMA for RP
    (9) atom -> . PRED LP VAR RP
    (10) atom -> . PRED LP VAR COMMA VAR RP
    (11) atom -> . EQ LP VAR COMMA VAR RP

    NEG             shift and go to state 4
    AND             shift and go to state 1
    OR              shift and go to state 10
    SOME            shift and go to state 5
    ALL             shift and go to state 2
    IMP             shift and go to state 7
    PRED            shift and go to state 11
    EQ              shift and go to state 9

    for                            shift and go to state 24
    atom                           shift and go to state 8

state 17

    (11) atom -> EQ LP . VAR COMMA VAR RP

    VAR             shift and go to state 25


state 18

    (5) for -> OR LP . for COMMA for RP
    (2) for -> . atom
    (3) for -> . NEG LP for RP
    (4) for -> . AND LP for COMMA for RP
    (5) for -> . OR LP for COMMA for RP
    (6) for -> . SOME LP VAR COMMA for RP
    (7) for -> . ALL LP VAR COMMA for RP
    (8) for -> . IMP LP for COMMA for RP
    (9) atom -> . PRED LP VAR RP
    (10) atom -> . PRED LP VAR COMMA VAR RP
    (11) atom -> . EQ LP VAR COMMA VAR RP

    NEG             shift and go to state 4
    AND             shift and go to state 1
    OR              shift and go to state 10
    SOME            shift and go to state 5
    ALL             shift and go to state 2
    IMP             shift and go to state 7
    PRED            shift and go to state 11
    EQ              shift and go to state 9

    for                            shift and go to state 26
    atom                           shift and go to state 8

state 19

    (9) atom -> PRED LP . VAR RP
    (10) atom -> PRED LP . VAR COMMA VAR RP

    VAR             shift and go to state 27


state 20

    (4) for -> AND LP for . COMMA for RP

    COMMA           shift and go to state 28


state 21

    (7) for -> ALL LP VAR . COMMA for RP

    COMMA           shift and go to state 29


state 22

    (3) for -> NEG LP for . RP

    RP              shift and go to state 30


state 23

    (6) for -> SOME LP VAR . COMMA for RP

    COMMA           shift and go to state 31


state 24

    (8) for -> IMP LP for . COMMA for RP

    COMMA           shift and go to state 32


state 25

    (11) atom -> EQ LP VAR . COMMA VAR RP

    COMMA           shift and go to state 33


state 26

    (5) for -> OR LP for . COMMA for RP

    COMMA           shift and go to state 34


state 27

    (9) atom -> PRED LP VAR . RP
    (10) atom -> PRED LP VAR . COMMA VAR RP

    RP              shift and go to state 36
    COMMA           shift and go to state 35


state 28

    (4) for -> AND LP for COMMA . for RP
    (2) for -> . atom
    (3) for -> . NEG LP for RP
    (4) for -> . AND LP for COMMA for RP
    (5) for -> . OR LP for COMMA for RP
    (6) for -> . SOME LP VAR COMMA for RP
    (7) for -> . ALL LP VAR COMMA for RP
    (8) for -> . IMP LP for COMMA for RP
    (9) atom -> . PRED LP VAR RP
    (10) atom -> . PRED LP VAR COMMA VAR RP
    (11) atom -> . EQ LP VAR COMMA VAR RP

    NEG             shift and go to state 4
    AND             shift and go to state 1
    OR              shift and go to state 10
    SOME            shift and go to state 5
    ALL             shift and go to state 2
    IMP             shift and go to state 7
    PRED            shift and go to state 11
    EQ              shift and go to state 9

    for                            shift and go to state 37
    atom                           shift and go to state 8

state 29

    (7) for -> ALL LP VAR COMMA . for RP
    (2) for -> . atom
    (3) for -> . NEG LP for RP
    (4) for -> . AND LP for COMMA for RP
    (5) for -> . OR LP for COMMA for RP
    (6) for -> . SOME LP VAR COMMA for RP
    (7) for -> . ALL LP VAR COMMA for RP
    (8) for -> . IMP LP for COMMA for RP
    (9) atom -> . PRED LP VAR RP
    (10) atom -> . PRED LP VAR COMMA VAR RP
    (11) atom -> . EQ LP VAR COMMA VAR RP

    NEG             shift and go to state 4
    AND             shift and go to state 1
    OR              shift and go to state 10
    SOME            shift and go to state 5
    ALL             shift and go to state 2
    IMP             shift and go to state 7
    PRED            shift and go to state 11
    EQ              shift and go to state 9

    for                            shift and go to state 38
    atom                           shift and go to state 8

state 30

    (3) for -> NEG LP for RP .

    COMMA           reduce using rule 3 (for -> NEG LP for RP .)
    RP              reduce using rule 3 (for -> NEG LP for RP .)
    $end            reduce using rule 3 (for -> NEG LP for RP .)


state 31

    (6) for -> SOME LP VAR COMMA . for RP
    (2) for -> . atom
    (3) for -> . NEG LP for RP
    (4) for -> . AND LP for COMMA for RP
    (5) for -> . OR LP for COMMA for RP
    (6) for -> . SOME LP VAR COMMA for RP
    (7) for -> . ALL LP VAR COMMA for RP
    (8) for -> . IMP LP for COMMA for RP
    (9) atom -> . PRED LP VAR RP
    (10) atom -> . PRED LP VAR COMMA VAR RP
    (11) atom -> . EQ LP VAR COMMA VAR RP

    NEG             shift and go to state 4
    AND             shift and go to state 1
    OR              shift and go to state 10
    SOME            shift and go to state 5
    ALL             shift and go to state 2
    IMP             shift and go to state 7
    PRED            shift and go to state 11
    EQ              shift and go to state 9

    for                            shift and go to state 39
    atom                           shift and go to state 8

state 32

    (8) for -> IMP LP for COMMA . for RP
    (2) for -> . atom
    (3) for -> . NEG LP for RP
    (4) for -> . AND LP for COMMA for RP
    (5) for -> . OR LP for COMMA for RP
    (6) for -> . SOME LP VAR COMMA for RP
    (7) for -> . ALL LP VAR COMMA for RP
    (8) for -> . IMP LP for COMMA for RP
    (9) atom -> . PRED LP VAR RP
    (10) atom -> . PRED LP VAR COMMA VAR RP
    (11) atom -> . EQ LP VAR COMMA VAR RP

    NEG             shift and go to state 4
    AND             shift and go to state 1
    OR              shift and go to state 10
    SOME            shift and go to state 5
    ALL             shift and go to state 2
    IMP             shift and go to state 7
    PRED            shift and go to state 11
    EQ              shift and go to state 9

    for                            shift and go to state 40
    atom                           shift and go to state 8

state 33

    (11) atom -> EQ LP VAR COMMA . VAR RP

    VAR             shift and go to state 41


state 34

    (5) for -> OR LP for COMMA . for RP
    (2) for -> . atom
    (3) for -> . NEG LP for RP
    (4) for -> . AND LP for COMMA for RP
    (5) for -> . OR LP for COMMA for RP
    (6) for -> . SOME LP VAR COMMA for RP
    (7) for -> . ALL LP VAR COMMA for RP
    (8) for -> . IMP LP for COMMA for RP
    (9) atom -> . PRED LP VAR RP
    (10) atom -> . PRED LP VAR COMMA VAR RP
    (11) atom -> . EQ LP VAR COMMA VAR RP

    NEG             shift and go to state 4
    AND             shift and go to state 1
    OR              shift and go to state 10
    SOME            shift and go to state 5
    ALL             shift and go to state 2
    IMP             shift and go to state 7
    PRED            shift and go to state 11
    EQ              shift and go to state 9

    for                            shift and go to state 42
    atom                           shift and go to state 8

state 35

    (10) atom -> PRED LP VAR COMMA . VAR RP

    VAR             shift and go to state 43


state 36

    (9) atom -> PRED LP VAR RP .

    COMMA           reduce using rule 9 (atom -> PRED LP VAR RP .)
    RP              reduce using rule 9 (atom -> PRED LP VAR RP .)
    $end            reduce using rule 9 (atom -> PRED LP VAR RP .)


state 37

    (4) for -> AND LP for COMMA for . RP

    RP              shift and go to state 44


state 38

    (7) for -> ALL LP VAR COMMA for . RP

    RP              shift and go to state 45


state 39

    (6) for -> SOME LP VAR COMMA for . RP

    RP              shift and go to state 46


state 40

    (8) for -> IMP LP for COMMA for . RP

    RP              shift and go to state 47


state 41

    (11) atom -> EQ LP VAR COMMA VAR . RP

    RP              shift and go to state 48


state 42

    (5) for -> OR LP for COMMA for . RP

    RP              shift and go to state 49


state 43

    (10) atom -> PRED LP VAR COMMA VAR . RP

    RP              shift and go to state 50


state 44

    (4) for -> AND LP for COMMA for RP .

    COMMA           reduce using rule 4 (for -> AND LP for COMMA for RP .)
    RP              reduce using rule 4 (for -> AND LP for COMMA for RP .)
    $end            reduce using rule 4 (for -> AND LP for COMMA for RP .)


state 45

    (7) for -> ALL LP VAR COMMA for RP .

    COMMA           reduce using rule 7 (for -> ALL LP VAR COMMA for RP .)
    RP              reduce using rule 7 (for -> ALL LP VAR COMMA for RP .)
    $end            reduce using rule 7 (for -> ALL LP VAR COMMA for RP .)


state 46

    (6) for -> SOME LP VAR COMMA for RP .

    COMMA           reduce using rule 6 (for -> SOME LP VAR COMMA for RP .)
    RP              reduce using rule 6 (for -> SOME LP VAR COMMA for RP .)
    $end            reduce using rule 6 (for -> SOME LP VAR COMMA for RP .)


state 47

    (8) for -> IMP LP for COMMA for RP .

    COMMA           reduce using rule 8 (for -> IMP LP for COMMA for RP .)
    RP              reduce using rule 8 (for -> IMP LP for COMMA for RP .)
    $end            reduce using rule 8 (for -> IMP LP for COMMA for RP .)


state 48

    (11) atom -> EQ LP VAR COMMA VAR RP .

    COMMA           reduce using rule 11 (atom -> EQ LP VAR COMMA VAR RP .)
    RP              reduce using rule 11 (atom -> EQ LP VAR COMMA VAR RP .)
    $end            reduce using rule 11 (atom -> EQ LP VAR COMMA VAR RP .)


state 49

    (5) for -> OR LP for COMMA for RP .

    COMMA           reduce using rule 5 (for -> OR LP for COMMA for RP .)
    RP              reduce using rule 5 (for -> OR LP for COMMA for RP .)
    $end            reduce using rule 5 (for -> OR LP for COMMA for RP .)


state 50

    (10) atom -> PRED LP VAR COMMA VAR RP .

    COMMA           reduce using rule 10 (atom -> PRED LP VAR COMMA VAR RP .)
    RP              reduce using rule 10 (atom -> PRED LP VAR COMMA VAR RP .)
    $end            reduce using rule 10 (atom -> PRED LP VAR COMMA VAR RP .)

